# Mikro

./: .gitignore  CMakeLists.txt  mikro.gpl
docs/: .buildinfo  api.json  genindex.html  index.html  index.rst  make.bat  mik.html  mik.rst  objects.inv  rainbow-custom.min.js  search.html  searchindex.js  start.html
docs/examples/: add_animation.lua
docs/highlight/: highlight.pack.js
docs/source/: conf.py  start.rst
res/: fw.lua  match3.lua  test.lua
src/: animator.cpp  animator.h  argparse.hpp  audio.cpp  audio.h  bitmap.cpp  bitmap.h  byteutils.cpp  byteutils.h  cartridge.cpp  cartridge.h  dr_wav.h  frame.h  log.cpp  log.h  main.cpp  mik.cpp  mik.h  miklua.cpp  miklua.h  png.inl  sprite.cpp  sprite.h  types.h
src/gzip/: CMakeLists.txt
